# ML_learning

./: Clustering.ipynb  Decision_tree.ipynb  LR_R&L.ipynb  NumPy_Arrays.ipynb  pandas_tutorial.ipynb  pyproject.toml  pytorch.ipynb  test.py
Breast_cancer_classification/: code.ipynb
Diabetes_prediction/: code.ipynb  pred_sys.py  pred_web_app.py  trained_model.sav
NN_from_scratch/: scratch.ipynb
fake_news_prediction/: code.ipynb
house_price_prediction/: code.ipynb
med_cost_prediction/: code.ipynb
mineVSrock/: rockVSmine.ipynb
wine_quality_prediction/: code.ipynb
