[project]
name = "ml-kn"
version = "0.1.0"
description = "Just trying out some machine learning algorithms and techniques."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "xgboost"
]
